{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 424,
  "lineage": "0a24651b-d317-d428-a710-c48826c6775e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09752104d09af55b0",
            "association_id": "eipassoc-0426d93af0035443f",
            "domain": "vpc",
            "id": "eipalloc-09752104d09af55b0",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-087140c60bee04fd7",
            "private_dns": "ip-10-0-3-13.ca-central-1.compute.internal",
            "private_ip": "10.0.3.13",
            "public_dns": "ec2-3-96-17-39.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.17.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-1-eip-NAT-1"
            },
            "tags_all": {
              "Name": "app-1-eip-NAT-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8ec1a152c5f43a4",
            "association_id": "eipassoc-00c0995bbdcca8d74",
            "domain": "vpc",
            "id": "eipalloc-0a8ec1a152c5f43a4",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-044f470fe8cb3043c",
            "private_dns": "ip-10-0-4-222.ca-central-1.compute.internal",
            "private_ip": "10.0.4.222",
            "public_dns": "ec2-15-156-162-3.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.156.162.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-1-eip-NAT-2"
            },
            "tags_all": {
              "Name": "app-1-eip-NAT-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-1-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2e7efb4257c0907",
            "arn": "arn:aws:ec2:ca-central-1:174234757131:instance/i-04f64be3d26cf8499",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f64be3d26cf8499",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e941bc987f13935d",
            "private_dns": "ip-10-0-1-58.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_ip": "35.183.209.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e031b317b5ebb196",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0a0006876afed5a",
            "tags": {
              "Name": "app-1-server_1"
            },
            "tags_all": {
              "Name": "app-1-server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2f6a5b3bfad6c69"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_instance",
            "aws_subnet.app-1-private-subnets",
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2e7efb4257c0907",
            "arn": "arn:aws:ec2:ca-central-1:174234757131:instance/i-078a0433c8da696f3",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078a0433c8da696f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d555bbd9244398f",
            "private_dns": "ip-10-0-2-205.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.205",
            "public_ip": "35.183.184.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043f01d7aff6c762b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0815fdd2a5908e0cc",
            "tags": {
              "Name": "app-1-server_2"
            },
            "tags_all": {
              "Name": "app-1-server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2f6a5b3bfad6c69"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_instance",
            "aws_subnet.app-1-private-subnets",
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-1-internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:internet-gateway/igw-054fc4507c1f15027",
            "id": "igw-054fc4507c1f15027",
            "owner_id": "174234757131",
            "tags": {
              "Name": "app-1-internet_gateway"
            },
            "tags_all": {
              "Name": "app-1-internet_gateway"
            },
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-1-load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "app-1-access-log-bucket",
                "enabled": true,
                "prefix": "lb/access-log"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:loadbalancer/app/app-1-lb/224c76fa33cfaf0c",
            "arn_suffix": "app/app-1-lb/224c76fa33cfaf0c",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-1-lb-1168159880.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:loadbalancer/app/app-1-lb/224c76fa33cfaf0c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-1-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fb0dffc7940c8be2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01532f8e8967d3f0b"
              },
              {
                "subnet_id": "subnet-0e58b508be169ce3e"
              }
            ],
            "subnets": [
              "subnet-01532f8e8967d3f0b",
              "subnet-0e58b508be169ce3e"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0bab6308a16806acf",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_s3_bucket.app-1-access-log",
            "aws_security_group.load-balancer",
            "aws_subnet.app-1-public-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:listener/app/app-1-lb/224c76fa33cfaf0c/8afe767ea60bcd15",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:targetgroup/app-1-lb-target-group/3be99f876f4493c6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:listener/app/app-1-lb/224c76fa33cfaf0c/8afe767ea60bcd15",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:loadbalancer/app/app-1-lb/224c76fa33cfaf0c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-1-load_balancer",
            "aws_lb_target_group.app-1-lb-target-group",
            "aws_s3_bucket.app-1-access-log",
            "aws_security_group.load-balancer",
            "aws_subnet.app-1-public-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-1-lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:targetgroup/app-1-lb-target-group/3be99f876f4493c6",
            "arn_suffix": "targetgroup/app-1-lb-target-group/3be99f876f4493c6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:targetgroup/app-1-lb-target-group/3be99f876f4493c6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-1-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:targetgroup/app-1-lb-target-group/3be99f876f4493c6-20231226232629619000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:targetgroup/app-1-lb-target-group/3be99f876f4493c6",
            "target_id": "i-04f64be3d26cf8499"
          },
          "dependencies": [
            "aws_instance.app-1-servers",
            "aws_lb_target_group.app-1-lb-target-group",
            "aws_security_group.ec2_instance",
            "aws_subnet.app-1-private-subnets",
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:targetgroup/app-1-lb-target-group/3be99f876f4493c6-20231226232629727700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:174234757131:targetgroup/app-1-lb-target-group/3be99f876f4493c6",
            "target_id": "i-078a0433c8da696f3"
          },
          "dependencies": [
            "aws_instance.app-1-servers",
            "aws_lb_target_group.app-1-lb-target-group",
            "aws_security_group.ec2_instance",
            "aws_subnet.app-1-private-subnets",
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "app_1_nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09752104d09af55b0",
            "association_id": "eipassoc-0426d93af0035443f",
            "connectivity_type": "public",
            "id": "nat-00fa87c3be3d71f43",
            "network_interface_id": "eni-087140c60bee04fd7",
            "private_ip": "10.0.3.13",
            "public_ip": "3.96.17.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01532f8e8967d3f0b",
            "tags": {
              "Name": "app-1-NAT-1"
            },
            "tags_all": {
              "Name": "app-1-NAT-1"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat-gateway",
            "aws_internet_gateway.app-1-internet_gateway",
            "aws_subnet.app-1-public-subnets",
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8ec1a152c5f43a4",
            "association_id": "eipassoc-00c0995bbdcca8d74",
            "connectivity_type": "public",
            "id": "nat-0e1a581d421a862aa",
            "network_interface_id": "eni-044f470fe8cb3043c",
            "private_ip": "10.0.4.222",
            "public_ip": "15.156.162.3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e58b508be169ce3e",
            "tags": {
              "Name": "app-1-NAT-2"
            },
            "tags_all": {
              "Name": "app-1-NAT-2"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat-gateway",
            "aws_internet_gateway.app-1-internet_gateway",
            "aws_subnet.app-1-public-subnets",
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07259432d29e423511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00fa87c3be3d71f43",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07259432d29e42351",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-nat-gateway",
            "aws_internet_gateway.app-1-internet_gateway",
            "aws_nat_gateway.app_1_nat_gateways",
            "aws_route_table.app-1-private-route-tables",
            "aws_subnet.app-1-public-subnets",
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e263b53dd8c2eb9e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e1a581d421a862aa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e263b53dd8c2eb9e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-nat-gateway",
            "aws_internet_gateway.app-1-internet_gateway",
            "aws_nat_gateway.app_1_nat_gateways",
            "aws_route_table.app-1-private-route-tables",
            "aws_subnet.app-1-public-subnets",
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-1-private-route-tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:route-table/rtb-07259432d29e42351",
            "id": "rtb-07259432d29e42351",
            "owner_id": "174234757131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00fa87c3be3d71f43",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-1"
            },
            "tags_all": {
              "Name": "-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:route-table/rtb-0e263b53dd8c2eb9e",
            "id": "rtb-0e263b53dd8c2eb9e",
            "owner_id": "174234757131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e1a581d421a862aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-2"
            },
            "tags_all": {
              "Name": "-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-1-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:route-table/rtb-061835abe87b67638",
            "id": "rtb-061835abe87b67638",
            "owner_id": "174234757131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054fc4507c1f15027",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054fc4507c1f15027",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-1-public-route-table"
            },
            "tags_all": {
              "Name": "app-1-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app-1-internet_gateway",
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-1-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071eba76513c55cc8",
            "route_table_id": "rtb-07259432d29e42351",
            "subnet_id": "subnet-0b0a0006876afed5a"
          },
          "dependencies": [
            "aws_route_table.app-1-private-route-tables",
            "aws_subnet.app-1-private-subnets",
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b88d8ab51b8c63c",
            "route_table_id": "rtb-0e263b53dd8c2eb9e",
            "subnet_id": "subnet-0815fdd2a5908e0cc"
          },
          "dependencies": [
            "aws_route_table.app-1-private-route-tables",
            "aws_subnet.app-1-private-subnets",
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-1-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0004816480ab8d032",
            "route_table_id": "rtb-061835abe87b67638",
            "subnet_id": "subnet-01532f8e8967d3f0b"
          },
          "dependencies": [
            "aws_internet_gateway.app-1-internet_gateway",
            "aws_route_table.app-1-public-route-table",
            "aws_subnet.app-1-public-subnets",
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b80a8edee75005c3",
            "route_table_id": "rtb-061835abe87b67638",
            "subnet_id": "subnet-0e58b508be169ce3e"
          },
          "dependencies": [
            "aws_internet_gateway.app-1-internet_gateway",
            "aws_route_table.app-1-public-route-table",
            "aws_subnet.app-1-public-subnets",
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:security-group/sg-0d2f6a5b3bfad6c69",
            "description": "Allow traffic to ec2 instance from load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2f6a5b3bfad6c69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-instance-sg",
            "name_prefix": "",
            "owner_id": "174234757131",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:security-group/sg-0fb0dffc7940c8be2",
            "description": "Allow trafics to load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb0dffc7940c8be2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Alow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP for load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2f6a5b3bfad6c69"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "174234757131",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_instance",
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-1-private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:subnet/subnet-0b0a0006876afed5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0a0006876afed5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174234757131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-1-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "app-1-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:subnet/subnet-0815fdd2a5908e0cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0815fdd2a5908e0cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174234757131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-1-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "app-1-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-1-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:subnet/subnet-01532f8e8967d3f0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01532f8e8967d3f0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174234757131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-1-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "app-1-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:subnet/subnet-0e58b508be169ce3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e58b508be169ce3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174234757131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-1-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "app-1-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0bab6308a16806acf"
          },
          "dependencies": [
            "aws_vpc.app-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:174234757131:vpc/vpc-0bab6308a16806acf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c6a48a6e6d4b251",
            "default_route_table_id": "rtb-026a44675382ac9c1",
            "default_security_group_id": "sg-0ec8052cf2cec409f",
            "dhcp_options_id": "dopt-9cb4a9f4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bab6308a16806acf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026a44675382ac9c1",
            "owner_id": "174234757131",
            "tags": {
              "Name": "app-1-vpc"
            },
            "tags_all": {
              "Name": "app-1-vpc"
            }
          }
        }
      ]
    }
  ]
}